--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
     <script type="text/javascript">
         function beliProduk() {
-            alert('Berhasil menambahkan produk ke keranjang Belanja');
+            alert('Selamat anda berhasil menambahkan produk ke keranjang Belanja');
         }
     </script>
 
